<resources>
    <string name="app_name">BikeFriend</string>

    <string name="preference_file_key">bikefriend_shared_preferences_path</string>

    <string name="available_bikes">Available bikes</string>
    <string name="available_locks">Available locks</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_add_favorite">Add favorite</string>

    <!-- Main -->
    <string name="find_available_bike">Find available bike</string>
    <string name="find_available_rack">Find available bike rack</string>
    <string name="loading">Please wait, loading data</string>

    <!-- Settings -->
    <string name="btn_add_favorite">Add favorite station</string>
    <string name="txt_select_sync_interval">How often do you want to synchronize status of bike stations (in minutes)?</string>
    <string name="txt_select_sync_interval_default">1</string>
    <string name="title_add_favorite">Add favorite bike station</string>
    <string name="search_hing">Station name</string>

    <!-- Favorites -->
    <string name="title_favorites">Favorite bike stations</string>
    <string name="title_favorites_none_selected">You have not yet selected any favorites.</string>

    <!-- Content description -->
    <string name="descr_delete_from_favorites">Delete from favorites</string>
    <string name="descr_search">Search</string>
    <string name="descr_sync_interval">Enter sync interval</string>
    <string name="descr_available_bikes">Available bikes</string>
    <string name="descr_available_locks">Available locks</string>

</resources>
