<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <Button
        android:id="@+id/btn_add_favorite"
        android:layout_margin="@dimen/large_margin"
        android:text="@string/btn_add_favorite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/large_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="90"
            android:layout_width="0dp"
            android:textSize="@dimen/text_size_large"
            android:text="@string/txt_select_sync_interval"
            android:layout_height="wrap_content" />

        <EditText
            android:contentDescription="@string/descr_sync_interval"
            android:id="@+id/txt_edit_sync_interval"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/default_margin"
            android:inputType="number"
            android:textSize="@dimen/text_size_large"
            android:layout_height="wrap_content"
            android:layout_weight="10"
            android:hint="1"/>

    </LinearLayout>

    <TextView
        android:layout_marginStart="@dimen/large_margin"
        android:layout_width="match_parent"
        android:textSize="@dimen/text_size_large"
        android:text="@string/title_favorites"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_no_favorites"
        android:text="@string/title_favorites_none_selected"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_margin="@dimen/large_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>