<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bikefriend.jrs.bikefriend.MainActivity">

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginTop="@dimen/very_large_margin"
            android:id="@+id/btn_get_bike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_available_bike" />
        <Button
            android:layout_marginTop="@dimen/large_margin"
            android:id="@+id/btn_park_bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/find_available_rack" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/very_large_margin"
        android:layout_marginStart="@dimen/large_margin"
        android:layout_width="match_parent"
        android:textSize="@dimen/text_size_large"
        android:text="@string/title_favorites"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/txt_no_favorites"
        android:text="@string/title_favorites_none_selected"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_margin="@dimen/large_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
